// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextAreaCell component TextAreaCell handles changes 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field gds-typography"
                data-testid="DATA-TEST-ID"
                id="data"
                name="data"
                rows="1"
                style="height: 0px;"
              >
                text
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell handles changes 2`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field gds-typography"
                data-testid="DATA-TEST-ID"
                id="data"
                name="data"
                rows="1"
                style="height: 0px;"
              >
                text
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field-read-only gds-typography"
                id="data"
                name="data"
                readonly=""
                rows="1"
              >
                text 1
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders cell editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field gds-typography"
                id="data"
                name="data"
                rows="1"
                style="height: 0px;"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders hidden 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
          style="display: none;"
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field-read-only gds-typography"
                id="data"
                name="data"
                readonly=""
                rows="1"
              >
                text 1
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders row editing with no row input 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field gds-typography"
                id="data"
                name="data"
                rows="1"
                style="height: 0px;"
              />
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`TextAreaCell component TextAreaCell renders with forced value 1`] = `
<div>
  <table>
    <tbody>
      <tr>
        <td
          class=""
        >
          <div
            class="gds-field-group"
          >
            <div
              class="field gds-input-textarea-parent"
            >
              <textarea
                class="input-textarea-field-read-only gds-typography"
                id="data"
                name="data"
                readonly=""
                rows="1"
              >
                text 2
              </textarea>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
